--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -683,6 +683,26 @@ h4.detail-title {
     letter-spacing: 0.1px;
     border-bottom: 1px solid #dad8d8;
   }
+  td.reports-field {
+    width: 150px;
+    max-width: 100%;
+  }
+  td.reports-field div {
+    display: inline-block;
+    margin: 0.3em auto;
+  }
+  td.reports-field a {
+    width: 4em;
+    max-width: 100%;
+    padding: 0.7em;
+    color: #fff;
+    background-color: #7C959E;
+    border-color: #7C959E;
+    transition: all 0.3s ease-in-out 0s;
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    border-radius: 0;
+    letter-spacing: 2px;
+  }
 }
 #adminTableToolbar {
   div.orglist-selector {
