initial queries ui code bug fix/re-factoring, portal.py app text refactoring

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -404,6 +404,12 @@ div.right-panel {
   margin: auto;
 }
 /***** initial queries page style ****/
+.terms-of-use-intro {
+  display: none;
+}
+#topTerms .well {
+  margin-top: 1em;
+}
 #topTerms .default-tou-text {
   display: none;
 }
