--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -462,11 +462,18 @@ div.right-panel {
   max-width: 991px;
   margin: auto;
 }
+.terms-of-use-intro {
+  display: none;
+}
 #topTerms ~ #aboutForm {
   margin: 1em auto;
   min-height: 50vh;
 }
 #topTerms {
+  .well {
+    margin-top: 1em;
+  }
+
   .custom-tou-text a {
     text-decoration: underline;
   }
