--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -1,10 +1,12 @@
 {% macro tou(terms) -%}
-    <div id="topTerms">
+    <div id="topTerms" class="hide-terms">
         <br/>
-        <h4 class="tnth-headline">{{ _("Terms of Use") }}</h4>
-        <hr/>
-        <br/>
-        <p>{{ _("Thanks for signing up for TrueNTH. First, please review the terms of use to access the TrueNTH tools") }}:</p>
+        <div class="terms-of-use-intro">
+          <h4 class="tnth-headline">{{ _("Terms of Use") }}</h4>
+          <hr/>
+          <br/>
+          <p>{{ _("Thanks for signing up for TrueNTH. First, please review the terms of use to access the TrueNTH tools") }}:</p>
+        </div>
         <div class="well">
             <div id="termsText">
               {{ terms['asset']|safe if terms}}
@@ -282,7 +284,7 @@
             </div>
             <div id="biopsyDateContainer" class="indent form-group">
             	<label for="biopsyDate">{{_("Biopsy Date")}}:</label>
-            	<input id="biopsyDate" type="text" class="form-control" placeholder="d M yyyy" maxlength="11">
+            	<input id="biopsyDate" type="text" data-name="biopsy" class="form-control" placeholder="d M yyyy" maxlength="11">
             	<div id="biopsyDateError" class="error-message post-biopsy-error"></div>
             </div>
             <div class="radio biopsy-option">
