--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -75,7 +75,7 @@
               <li class="side-nav-items__item"><a href="{{PORTAL}}/profile">My TrueNTH Profile</a></li>
           {% endif %}
           <li class="side-nav-items__item side-nav-items__item--about"><a href="{{PORTAL}}/about">About TrueNTH</a></li>
-          {% if user and (user.has_role(ROLE.APPLICATION_DEVELOPER) or user.has_role(ROLE.ADMIN)) %}
+          {% if user and user.has_role(ROLE.APPLICATION_DEVELOPER) %}
               <li class="side-nav-items__item side-nav-items__item--clients"><a href="{{PORTAL}}/clients">Client Applications</a></li>
           {% endif %}
           {% if user and user.has_role(ROLE.ADMIN) %}
