fix buttons styling for reports in patients list

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -702,6 +702,7 @@ h4.detail-title {
     -webkit-transition: all 0.3s ease-in-out 0s;
     border-radius: 0;
     letter-spacing: 2px;
+    margin: 0 0.2em;
   }
 }
 #adminTableToolbar {
