refactor consents UI code

--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -68,9 +68,9 @@
         -->
         <br/>
         {%- if user.id == current_user.id -%}
-          {{user_profile(user, current_user, consent_agreements, user_interventions, terms)}}
+          {{user_profile(user, current_user, consent_agreements, user_interventions)}}
         {%- else -%}
-          {{profile(user, current_user, consent_agreements, user_interventions, terms)}}
+          {{profile(user, current_user, consent_agreements, user_interventions)}}
         {%- endif -%}
           <br/><br/>
       </div>
@@ -81,7 +81,7 @@
 {% block footer %}<div class="footer-wrapper right-panel"><div class="flex footer-container"><div class="copyright-container">{%-if providerPerspective== 'true' -%}{{linksHTML(user=current_user)}}{%-else-%}{{linksHTML(user=user)}}{%-endif-%}</div><div class="logo-container">{{logo(True)}}</div></div></div>{% endblock %}
 {% block document_ready %}
 {% if user.has_role(ROLE.PATIENT) and (user.id != current_user.id) %}var patientId = {{user.id}};{% endif %}
-var TERMS_URL = {%-if terms and terms.url-%}"{{ terms.url|safe}}"{%-else-%}""{%-endif-%};
+
 function handleLoginAs(e) {
     if (e) {
       e.preventDefault();
