--- a/portal/templates/flask_user/_macros.html
+++ b/portal/templates/flask_user/_macros.html
@@ -111,7 +111,7 @@
     {{copyright_text(user)}}
 {%- endmacro %}
 {% macro logo(white_theme=False) -%}
-    <a href="http://us.movember.com" title="{{ _('Movember') }}">{%-if white_theme -%}<img id="footerLockup" src="{{PORTAL}}{{url_for('static',filename='img/logo_white.png')}}" height="86" width="86" alt="Movember Logo"/>&nbsp;<img id="footerLockup" src="{{PORTAL}}{{url_for('static',filename='img/Movember-Footer-Logo.png')}}" height="86" width="86" alt="Movember Logo"/>{%-else-%}<img id="footerLockup" src="{{PORTAL}}{{url_for('static',filename='img/logo_movember_lockup.png')}}" alt="Movember logo" />{%-endif-%}</a>
+    <a href="http://us.movember.com" title="{{ _('Movember') }}">{%-if white_theme -%}<img id="footerLogo" src="{{PORTAL}}{{url_for('static',filename='img/logo_white.png')}}" height="86" width="86" alt="Movember Logo"/>&nbsp;<img id="footerLockup" src="{{PORTAL}}{{url_for('static',filename='img/Movember-Footer-Logo.png')}}" height="86" width="86" alt="Movember Logo"/>{%-else-%}<img id="footerLockup" src="{{PORTAL}}{{url_for('static',filename='img/logo_movember_lockup.png')}}" alt="Movember logo" />{%-endif-%}</a>
 {%- endmacro %}
 {% macro copyright_text(user) -%}
      <script>
