--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -87,8 +87,6 @@
 var CONSENT_WITH_TOP_LEVEL_ORG = {% if config.CONSENT_WITH_TOP_LEVEL_ORG %}true{%else%}false{%endif%};
 // Check if there's a session variable for associated clinic
 var preselectClinic = "{{session.get('associate_clinic_id', '')}}";
-var TERMS_URL = {%-if terms and terms.url-%}"{{ terms.url|safe}}"{%-else-%}""{%-endif-%};
-
 var fc, mainSections = {}, _isChecked = false, rolesGroupClickEvent, patientQClickEvent, userOrgChangeEvent;
 
 /**** object for obtaining required core data ****/
@@ -691,24 +689,8 @@ $(document).ready(function(){
         };
       };
     };
-
-    $("#defaultConsentContainer .modal").each(function() {
-        $(this).on("hidden.bs.modal", function() {
-          if ($(this).find("input[name='defaultToConsent']:checked").length > 0) {
-            $("#userOrgs input[name='organization']").each(function() {
-                $(this).removeAttr("data-require-validate");
-            });
-            if (fc.allFieldsCompleted()) {
-              fc.continueToFinish();
-            } else {
-              if (fc.sectionCompleted("orgsContainer")) fc.continueToNext("orgsContainer");
-              else fc.stopContinue("orgsContainer");
-            };
-          };
-        });
-    });
-
-    $("#consentContainer .modal").each(function() {
+    
+    $("#consentContainer .modal, #defaultConsentContainer .modal").each(function() {
         $(this).on("hidden.bs.modal", function() {
             if ($(this).find("input[name='toConsent']:checked").length > 0) {
               $("#userOrgs input[name='organization']").each(function() {
